--- a/#sources/scss/checkout.scss
+++ b/#sources/scss/checkout.scss
@@ -304,6 +304,11 @@
     padding: 0px 0px 0px 20px;
     flex: 1 1 auto;
     input {
+      padding: 0px 10px 0px 15px;
+      color: #666666;
+      font-weight: 300;
+      font-size: 14px;
+
       border-color: #e5e5e5;
       background-color: white;
     }
