--- a/#sources/scss/checkout.scss
+++ b/#sources/scss/checkout.scss
@@ -303,7 +303,7 @@
   &__input {
     padding: 0px 0px 0px 20px;
     flex: 1 1 auto;
-    input {
+    .input {
       padding: 0px 10px 0px 15px;
       color: #666666;
       font-weight: 300;
@@ -316,7 +316,6 @@
       padding: 0px 0px 0px 0px;
     }
     textarea {
-      background-color: white;
       height: 120px;
     }
   }
