--- a/logo/css/styles.css
+++ b/logo/css/styles.css
@@ -3078,7 +3078,7 @@ body._lock {
           flex: 1 1 auto;
 }
 
-.form-checkout__input input {
+.form-checkout__input .input {
   padding: 0px 10px 0px 15px;
   color: #666666;
   font-weight: 300;
@@ -3088,7 +3088,6 @@ body._lock {
 }
 
 .form-checkout__input textarea {
-  background-color: white;
   height: 120px;
 }
 
@@ -3183,7 +3182,7 @@ textarea.input {
   position: relative;
 }
 
-.select._active .select__item .select__value:before {
+.select._active .select__value::before {
   -webkit-transform: rotate(-180deg);
   -ms-transform: rotate(-180deg);
   transform: rotate(-180deg);
